Second round of algorithms

--- a/2_first_step_algorithms/1_quantum_teleportation.ipynb
+++ b/2_first_step_algorithms/1_quantum_teleportation.ipynb
@@ -34,6 +34,66 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Desarrollo teórico del protocolo de teleportación cuántica**\n",
+    "\n",
+    "El protocolo de teleportación cuántica permite transferir un estado cuántico desconocido $|\\psi\\rangle$ desde Alice hasta Bob utilizando un par de qubits entrelazados y comunicación clásica.\n",
+    "\n",
+    "**Estado inicial:**\n",
+    "\n",
+    "Supongamos que Alice tiene un qubit en el estado arbitrario:\n",
+    "$$|\\psi\\rangle = \\alpha|0\\rangle + \\beta|1\\rangle$$\n",
+    "\n",
+    "donde $|\\alpha|^2 + |\\beta|^2 = 1$.\n",
+    "\n",
+    "Alice y Bob comparten previamente un par de qubits entrelazados en el estado de Bell:\n",
+    "$$|\\Phi^+\\rangle = \\frac{1}{\\sqrt{2}}(|00\\rangle + |11\\rangle)$$\n",
+    "\n",
+    "El estado completo del sistema de tres qubits (Alice, Mensajero, Bob) es:\n",
+    "$$|\\psi\\rangle \\otimes |\\Phi^+\\rangle = (\\alpha|0\\rangle + \\beta|1\\rangle) \\otimes \\frac{1}{\\sqrt{2}}(|00\\rangle + |11\\rangle)$$\n",
+    "\n",
+    "Expandiendo:\n",
+    "$$= \\frac{1}{\\sqrt{2}}[\\alpha|0\\rangle(|00\\rangle + |11\\rangle) + \\beta|1\\rangle(|00\\rangle + |11\\rangle)]$$\n",
+    "$$= \\frac{1}{\\sqrt{2}}[\\alpha|000\\rangle + \\alpha|011\\rangle + \\beta|100\\rangle + \\beta|111\\rangle]$$\n",
+    "\n",
+    "**Paso 1: Puerta CNOT**\n",
+    "\n",
+    "Alice aplica una puerta CNOT entre su qubit y el qubit mensajero:\n",
+    "$$= \\frac{1}{\\sqrt{2}}[\\alpha|000\\rangle + \\alpha|011\\rangle + \\beta|110\\rangle + \\beta|101\\rangle]$$\n",
+    "\n",
+    "**Paso 2: Puerta Hadamard**\n",
+    "\n",
+    "Alice aplica una puerta Hadamard a su qubit:\n",
+    "$$= \\frac{1}{2}[\\alpha(|0\\rangle + |1\\rangle)|00\\rangle + \\alpha(|0\\rangle + |1\\rangle)|11\\rangle + \\beta(|0\\rangle - |1\\rangle)|10\\rangle + \\beta(|0\\rangle - |1\\rangle)|01\\rangle]$$\n",
+    "\n",
+    "Reagrupando según los estados de los dos primeros qubits (Alice y Mensajero):\n",
+    "$$= \\frac{1}{2}[|00\\rangle(\\alpha|0\\rangle + \\beta|1\\rangle) + |01\\rangle(\\alpha|1\\rangle + \\beta|0\\rangle) + |10\\rangle(\\alpha|0\\rangle - \\beta|1\\rangle) + |11\\rangle(\\alpha|1\\rangle - \\beta|0\\rangle)]$$\n",
+    "\n",
+    "**Paso 3: Medición**\n",
+    "\n",
+    "Alice mide sus dos qubits en la base computacional, obteniendo uno de cuatro resultados posibles (00, 01, 10, 11), cada uno con probabilidad 1/4.\n",
+    "\n",
+    "**Paso 4: Corrección**\n",
+    "\n",
+    "Según el resultado de la medición de Alice, el qubit de Bob queda en uno de estos estados:\n",
+    "- Si Alice mide **00**: Bob tiene $\\alpha|0\\rangle + \\beta|1\\rangle$ → No hace nada (I)\n",
+    "- Si Alice mide **01**: Bob tiene $\\alpha|1\\rangle + \\beta|0\\rangle$ → Aplica X\n",
+    "- Si Alice mide **10**: Bob tiene $\\alpha|0\\rangle - \\beta|1\\rangle$ → Aplica Z\n",
+    "- Si Alice mide **11**: Bob tiene $\\alpha|1\\rangle - \\beta|0\\rangle$ → Aplica ZX\n",
+    "\n",
+    "Tras aplicar la corrección apropiada, Bob recupera exactamente el estado original:\n",
+    "$$|\\psi\\rangle = \\alpha|0\\rangle + \\beta|1\\rangle$$\n",
+    "\n",
+    "**Propiedades importantes:**\n",
+    "1. El estado original de Alice se destruye durante la medición (no-clonación)\n",
+    "2. Se requieren 2 bits clásicos de comunicación\n",
+    "3. Bob no puede recuperar el estado sin la información clásica de Alice\n",
+    "4. La fidelidad de la teleportación es del 100% en el caso ideal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "nM8wjYwwCuVy"
    },
