--- a/2_first_step_algorithms/3_deutsch_jozsa.ipynb
+++ b/2_first_step_algorithms/3_deutsch_jozsa.ipynb
@@ -30,6 +30,88 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Desarrollo teórico del algoritmo de Deutsch-Jozsa\n",
+    "\n",
+    "El algoritmo de Deutsch-Jozsa se basa en la interferencia cuántica y la evaluación en paralelo de funciones mediante superposición. A continuación se presenta el desarrollo matemático completo del algoritmo.\n",
+    "\n",
+    "**Estado inicial:**\n",
+    "\n",
+    "Comenzamos con n+1 qubits en el estado:\n",
+    "\n",
+    "$$|\\psi_0\\rangle = |0\\rangle^{\\otimes n} |1\\rangle$$\n",
+    "\n",
+    "**Paso 1: Aplicación de puertas Hadamard**\n",
+    "\n",
+    "Aplicamos la puerta Hadamard a todos los qubits. Recordando que:\n",
+    "\n",
+    "$$H|0\\rangle = \\frac{|0\\rangle + |1\\rangle}{\\sqrt{2}}, \\quad H|1\\rangle = \\frac{|0\\rangle - |1\\rangle}{\\sqrt{2}}$$\n",
+    "\n",
+    "El estado después de aplicar las Hadamard es:\n",
+    "\n",
+    "$$|\\psi_1\\rangle = \\left[\\frac{1}{\\sqrt{2^n}}\\sum_{x=0}^{2^n-1}|x\\rangle\\right] \\otimes \\left[\\frac{|0\\rangle - |1\\rangle}{\\sqrt{2}}\\right]$$\n",
+    "\n",
+    "**Paso 2: Aplicación del oráculo**\n",
+    "\n",
+    "El oráculo implementa la transformación:\n",
+    "\n",
+    "$$U_f|x\\rangle|y\\rangle = |x\\rangle|y \\oplus f(x)\\rangle$$\n",
+    "\n",
+    "donde $\\oplus$ denota la suma módulo 2 (XOR).\n",
+    "\n",
+    "Cuando el qubit auxiliar está en el estado $\\frac{|0\\rangle - |1\\rangle}{\\sqrt{2}}$, el oráculo produce un \"phase kickback\":\n",
+    "\n",
+    "$$U_f|x\\rangle\\left[\\frac{|0\\rangle - |1\\rangle}{\\sqrt{2}}\\right] = (-1)^{f(x)}|x\\rangle\\left[\\frac{|0\\rangle - |1\\rangle}{\\sqrt{2}}\\right]$$\n",
+    "\n",
+    "Por lo tanto, el estado después del oráculo es:\n",
+    "\n",
+    "$$|\\psi_2\\rangle = \\frac{1}{\\sqrt{2^n}}\\sum_{x=0}^{2^n-1}(-1)^{f(x)}|x\\rangle \\otimes \\left[\\frac{|0\\rangle - |1\\rangle}{\\sqrt{2}}\\right]$$\n",
+    "\n",
+    "**Paso 3: Segunda aplicación de Hadamard**\n",
+    "\n",
+    "Aplicamos nuevamente Hadamard a los n qubits de entrada. La transformación de Hadamard sobre n qubits se puede expresar como:\n",
+    "\n",
+    "$$H^{\\otimes n}|x\\rangle = \\frac{1}{\\sqrt{2^n}}\\sum_{z=0}^{2^n-1}(-1)^{x \\cdot z}|z\\rangle$$\n",
+    "\n",
+    "donde $x \\cdot z = x_0z_0 \\oplus x_1z_1 \\oplus \\cdots \\oplus x_{n-1}z_{n-1}$ es el producto escalar binario.\n",
+    "\n",
+    "Aplicando esta transformación:\n",
+    "\n",
+    "$$|\\psi_3\\rangle = \\frac{1}{2^n}\\sum_{x=0}^{2^n-1}\\sum_{z=0}^{2^n-1}(-1)^{f(x)}(-1)^{x \\cdot z}|z\\rangle$$\n",
+    "\n",
+    "**Paso 4: Medición y análisis**\n",
+    "\n",
+    "La amplitud del estado $|0\\rangle^{\\otimes n}$ (es decir, cuando $z=0$) es:\n",
+    "\n",
+    "$$\\langle 0|^{\\otimes n}|\\psi_3\\rangle = \\frac{1}{2^n}\\sum_{x=0}^{2^n-1}(-1)^{f(x)}$$\n",
+    "\n",
+    "**Caso 1: Función constante**\n",
+    "\n",
+    "Si $f(x)$ es constante (siempre 0 o siempre 1):\n",
+    "\n",
+    "$$\\langle 0|^{\\otimes n}|\\psi_3\\rangle = \\frac{1}{2^n}\\sum_{x=0}^{2^n-1}(\\pm 1) = \\pm 1$$\n",
+    "\n",
+    "Por lo tanto, mediremos $|0\\rangle^{\\otimes n}$ con probabilidad 1.\n",
+    "\n",
+    "**Caso 2: Función balanceada**\n",
+    "\n",
+    "Si $f(x)$ es balanceada (mitad de las entradas dan 0, mitad dan 1):\n",
+    "\n",
+    "$$\\langle 0|^{\\otimes n}|\\psi_3\\rangle = \\frac{1}{2^n}\\left[\\sum_{f(x)=0}1 - \\sum_{f(x)=1}1\\right] = \\frac{1}{2^n}[2^{n-1} - 2^{n-1}] = 0$$\n",
+    "\n",
+    "Por lo tanto, mediremos cualquier estado excepto $|0\\rangle^{\\otimes n}$.\n",
+    "\n",
+    "**Conclusión:**\n",
+    "\n",
+    "- Si medimos $|00...0\\rangle$, la función es **constante**\n",
+    "- Si medimos cualquier otro estado, la función es **balanceada**\n",
+    "\n",
+    "Esta es la ventaja cuántica: con una sola evaluación del oráculo determinamos la naturaleza de la función, mientras que clásicamente necesitaríamos hasta $2^{n-1} + 1$ evaluaciones."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "RKprNHvHoFnA"
    },
