Last latex things

--- a/3_estimation_algorithms/11_holcus.ipynb
+++ b/3_estimation_algorithms/11_holcus.ipynb
@@ -15,7 +15,7 @@
         "\n",
         "**¿Qué vamos a hacer?**\n",
         "- Combinar el Hadamard Test (notebook 4) con LCU (notebook 9)\n",
-        "- Calcular ⟨ψ|H|ψ⟩ para $H = \\sum_{i=0}^{m-1} \\alpha_i U_i$ en un solo circuito\n",
+        "- Calcular $\\langle\\psi|H|\\psi\\rangle$ para $H = \\sum_{i=0}^{m-1} \\alpha_i U_i$ en un solo circuito\n",
         "- Aplicar a un ejemplo concreto"
       ]
     },
@@ -345,10 +345,10 @@
       "metadata": {},
       "source": [
         "---\n",
-        "# Ejemplo: H = α₁Z₁ + α₂Z₂\n",
+        "# Ejemplo: $H = \\alpha_0 Z_0 + \\alpha_1 Z_1$\n",
         "\n",
-        "Consideramos un Hamiltoniano de 2 qubits: H = (1/3)Z₁ + (2/3)Z₂.  \n",
-        "El valor esperado ⟨ψ|H|ψ⟩ se obtiene en un solo circuito con HoLCUs."
+        "Consideramos un Hamiltoniano de 2 qubits: $H = (1/3)Z_0 + (2/3)Z_1$.  \n",
+        "El valor esperado $\\langle\\psi|H|\\psi\\rangle$ se obtiene en un solo circuito con HoLCUs"
       ]
     },
     {
@@ -371,7 +371,7 @@
               "<Figure size 1907.48x451.5 with 1 Axes>"
             ]
           },
-          "execution_count": 7,
+          "execution_count": null,
           "metadata": {},
           "output_type": "execute_result"
         }
