--- a/4_search_algorithms/6_grover_algorithm.ipynb
+++ b/4_search_algorithms/6_grover_algorithm.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "En este notebook vamos a implementar el algoritmo de Grover para diferentes oráculos.\n",
     "\n",
-    "El algoritmo de Grover es uno de los algoritmos cuánticos más importantes, ya que permite realizar búsquedas en bases de datos no estructuradas con una aceleración cuadrática respecto a los algoritmos clásicos. Mientras que un algoritmo clásico requiere O(N) consultas para encontrar un elemento en una base de datos de N elementos, el algoritmo de Grover lo consigue en O(√N) consultas.\n",
+    "El algoritmo de Grover es uno de los algoritmos cuánticos más importantes, ya que permite realizar búsquedas en bases de datos no estructuradas con una aceleración cuadrática respecto a los algoritmos clásicos. Mientras que un algoritmo clásico requiere $O(N)$ consultas para encontrar un elemento en una base de datos de $N$ elementos, el algoritmo de Grover lo consigue en $O(\\sqrt{N})$ consultas.\n",
     "\n",
     "El algoritmo funciona mediante la aplicación repetida de dos operaciones principales:\n",
     "1. Un oráculo que marca el estado solución\n",
@@ -50,8 +50,8 @@
     "donde $\\theta = \\arcsin\\left(\\frac{1}{\\sqrt{N}}\\right)$\n",
     "\n",
     "**Complejidad:**\n",
-    "- Clásico: O(N) consultas\n",
-    "- Grover: O(√N) consultas\n",
+    "- Clásico: $O(N)$ consultas\n",
+    "- Grover: $O(\\sqrt{N})$ consultas\n",
     "\n",
     "Esto representa una aceleración cuadrática, que es óptima para búsqueda en bases de datos no estructuradas."
    ]
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "id": "0du7B6_6npd4"
    },
@@ -135,7 +135,7 @@
     "\n",
     "    n_reps = int(np.pi/4*np.sqrt(2**n))\n",
     "    #Control-Z con varios ctrl\n",
-    "    multicontrolz = MCMT(ZGate(), n-1, 1)\n",
+    "    multicontrolz = MCMTGate(ZGate(), n-1, 1)\n",
     "    for i in range(n_reps):\n",
     "        #Oraculo\n",
     "        qc.append(oracle, range(n))\n",
