--- a/6_linear_systems/9_linear_combination_unitaries.ipynb
+++ b/6_linear_systems/9_linear_combination_unitaries.ipynb
@@ -17,11 +17,11 @@
       "source": [
         "En este notebook vamos a implementar la técnica de Combinación Lineal de Unitarias (Linear Combination of Unitaries, LCU). Esta técnica es fundamental en computación cuántica para construir operadores complejos a partir de operadores unitarios más simples.\n",
         "\n",
-        "La idea central del LCU es que podemos expresar un operador general como una suma ponderada de operadores unitarios. Matemáticamente, si tenemos un operador A que queremos implementar, podemos escribirlo como:\n",
+        "La idea central del LCU es que podemos expresar un operador general como una suma ponderada de operadores unitarios. Matemáticamente, si tenemos un operador $A$ que queremos implementar, podemos escribirlo como:\n",
         "\n",
-        "A = α₀U₀ + α₁U₁ + α₂U₂ + ... + αₘ₋₁Uₘ₋₁\n",
+        "$$A = \\alpha_0 U_0 + \\alpha_1 U_1 + \\alpha_2 U_2 + \\ldots + \\alpha_{m-1} U_{m-1}$$\n",
         "\n",
-        "donde cada Uᵢ es un operador unitario y cada αᵢ es un coeficiente complejo que representa la amplitud o peso de ese operador en la combinación lineal.\n",
+        "donde cada $U_i$ es un operador unitario y cada $\\alpha_i$ es un coeficiente complejo que representa la amplitud o peso de ese operador en la combinación lineal.\n",
         "\n",
         "El algoritmo LCU utiliza qubits auxiliares (ancilla qubits) para preparar un estado que codifica estas amplitudes, y luego aplica los operadores unitarios de forma controlada según el estado de estos qubits auxiliares. Al final, mediante una medición selectiva y post-selección, podemos implementar efectivamente el operador deseado.\n",
         "\n",
