--- a/7_factorization_algorithms/13_shor_2n_plus_3.ipynb
+++ b/7_factorization_algorithms/13_shor_2n_plus_3.ipynb
@@ -15,7 +15,7 @@
     "id": "J_5BxrOUn-H4"
    },
    "source": [
-    "En este notebook vamos a implementar el algoritmo de Shor utilizando una versión optimizada que requiere únicamente 2n+3 qubits, donde n es el número de bits necesarios para representar el número que queremos factorizar. Esta implementación es significativamente más eficiente en términos de recursos cuánticos que las versiones tradicionales del algoritmo, lo que la hace más viable para su ejecución en dispositivos cuánticos reales con un número limitado de qubits.\n",
+    "En este notebook vamos a implementar el algoritmo de Shor utilizando una versión optimizada que requiere únicamente $2n+3$ qubits, donde $n$ es el número de bits necesarios para representar el número que queremos factorizar. Esta implementación es significativamente más eficiente en términos de recursos cuánticos que las versiones tradicionales del algoritmo, lo que la hace más viable para su ejecución en dispositivos cuánticos reales con un número limitado de qubits.\n",
     "\n",
     "La reducción en el número de qubits necesarios se logra mediante técnicas avanzadas de optimización del circuito cuántico, incluyendo el uso de estimación de fase cuántica iterativa (IQPE) y una gestión cuidadosa de los registros cuánticos. Esta versión mantiene la capacidad de factorizar números enteros de manera eficiente mientras minimiza los requisitos de hardware cuántico.\n",
     "\n",
